# todo-app

./: .gitignore  API_IMPLEMENTATIONS_GUIDE.md  BENCHMARK_GUIDE.md  COMPARISON.md  DOCKER_COMPOSE_FIX.md  GETTING_STARTED.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_INDEX.md  README.md  RUST_VERSION_UPDATE.md  benchmark-requirements.txt  benchmark.py
api/: .dockerignore  Cargo.toml  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  docker-compose.yml
api-fastapi/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  main.py  models.py  requirements.txt  schemas.py
api-fastapi/migrations/: 01_create_todos_table.sql
api-fastify/: .gitignore  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  package.json
api-fastify/migrations/: 01_create_todos_table.sql
api-fastify/src/: index.js
api-fastify/src/db/: connection.js
api-fastify/src/handlers/: todo.js
api-fastify/src/models/: todo.js
api-fiber/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  docker-compose.yml  go.mod  go.sum
api-fiber/cmd/: main.go
api-go/: IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  docker-compose.yml  go.mod
api-go/cmd/: main.go
api/migrations/: 01_create_todos_table.sql
api/src/: main.rs
api/src/db/: mod.rs
api/src/error/: mod.rs
api/src/handlers/: mod.rs  todo.rs
api/src/models/: mod.rs  todo.rs
api/src/routes/: mod.rs
client/: BUN_SETUP.md  README.md  app.js  index.html  styles.css
(+12 files in other folders)
