[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-rt = "2.10"
actix-cors = "0.7"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
